Fixed /team images overflow bug

--- a/public/styles/site/team.scss
+++ b/public/styles/site/team.scss
@@ -2,6 +2,7 @@
   .team-member-wrapper {
     color: white;
     margin: 0 0 30px 0;
+    overflow-y: hidden;
     .team-member-photo {
       width: 100%;
       min-height: 100%;
